# pulumi-baremetal

./: .dockerignore  .gitignore  .goreleaser.yml  Makefile  README.md  Untitled-1  Untitled-2  buf.gen.yaml  buf.yaml  compose.yml  log.txt  schema-baremetal.json
.github/: renovate.json
.versions/: dotnet
deployment-templates/: .goreleaser.yml  README-DEPLOYMENT.md  release.yml
hack/: .envrc.example  go.mod
provider/: go.mod  go.sum  provider.go  version.go
sdk/: go.mod  go.sum
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/pulumi_baremetal/: __init__.py  provider.py
sdk/python/unmango_baremetal/: __init__.py  _inputs.py  _utilities.py  bootstrap.py  command.py  outputs.py  provider.py  pulumi-plugin.json  random.py  tee.py
sdk/python/unmango_baremetal/cmd/: __init__.py  _inputs.py  chmod.py  mkdir.py  mktemp.py  mv.py  outputs.py  rm.py  tar.py  tee.py  wget.py
sdk/python/unmango_baremetal/command/: __init__.py  command.py
sdk/python/unmango_baremetal/config/: __init__.pyi  _inputs.py  outputs.py  vars.py
sdk/python/unmango_baremetal/coreutils/: __init__.py  _inputs.py  cat.py  chmod.py  mkdir.py  mktemp.py  mv.py  outputs.py  rm.py  tar.py  tee.py  wget.py
sdk/python/unmango_baremetal/kubeadm/: __init__.py  _inputs.py  kubeadm.py  outputs.py
sdk/python/unmango_baremetal/v1alpha1/: _inputs.py  outputs.py
tests/: Dockerfile  bootstrap_test.go  chmod_test.go  command_test.go  go.mod  go.sum  lifecycle_test.go  logging.go  mkdir_test.go  mktemp_test.go  mv_test.go  provider.go  provider_suite_test.go  provider_test.go  rm_test.go  (+6 more)
(+323 files in other folders)
