[project]
  name = "unmango_baremetal"
  dependencies = ["parver>=0.2.1", "pulumi>=3.0.0,<4.0.0", "pulumi-command>=1.0.0,<2.0.0", "semver>=2.8.1"]
  readme = "README.md"
  requires-python = ">=3.8"
  version = "0.0.0"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      unmango_baremetal = ["py.typed", "pulumi-plugin.json"]
